Bug 850928 - Fix assorted JS compiler warnings. r=dholbert,dvander