js/src/ion/MoveResolver.cpp
@@ -7,6 +7,8 @@
 
 #include "MoveResolver.h"
 
+#include "jsscriptinlines.h"
+
 using namespace js;
 using namespace js::ion;
 
